# MLPROD_practico1_scoping

./: README.md  mlprod_practico1.ipynb  pyproject.toml  requirements.txt
